--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Особистий сайт-візитка</title>
+  <title>Panchenko&fam</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
   <style>
@@ -86,20 +86,20 @@
 <body>
 <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Мій сайт-візитка</a>
+    <a class="navbar-brand" href="#">Panchenko&fam - change your life for the better way</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#about">Про мене</a>
+          <a class="nav-link" href="#about">Про нас</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#skills">Відгуки</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#projects">Проекти</a>
+          <a class="nav-link" href="#projects">Випускники</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact">Контакти</a>
@@ -112,7 +112,7 @@
 <section id="about" class="section">
   <div class="container">
     <center>
-      <h2 class="section-title">Про мене</h2>
+      <h2 class="section-title">Про нас</h2>
     </center>
     <div class="row">
       <div class="col-lg-6">
@@ -120,10 +120,10 @@
       </div>
       <div class="col-lg-6">
         <p>
-          Здарова! Ти з дитинства мріяв стати авторитетом на районі, хотів щоб нарешті у твоїй сім'ї почали прислуховуватися до твоєї думки, ти спав і бачив як будеш роз'їджати по райончику на чорному Мерседесі з великим V8 під капотом та гучним вихлопом?
+          Ти з дитинства мріяв стати авторитетом на районі, хочеш щоб нарешті у твоїй сім'ї почали прислуховуватися до твоєї думки, ти спав і бачив як будеш роз'їджати по райончику на чорному Мерседесі з великим V8 під капотом та гучним вихлопом?
           Вітаю, друже! Віднині саме у тебе з'явилася можливість втілити всі свої дитячі мрії у реальність.</p>
         <p>
-          Я, Ілля Сергійович - особистий наставник та піар менеджер. Моя компанія працює з 2008 року.</p>
+          Я, Ілля Сергійович - особистий наставник та піар менеджер, а також власник компанії по допомозі людям які бажають жити краще. Моя компанія працює з 2008 року.</p>
         <p>
           За 15 років ми накопичили величезний досвід в цій не простій сфері. Тому, можеш не сумніватися, в нас є всі необхідні знання та люди, які допоможуть зробити з тебе не просто гідну людину, а щей розкрутити тебе як власний бренд!
         </p>
@@ -140,7 +140,7 @@
     <div class="row">
       <div class="col-md-4">
         <div class="skill">
-          <h3>Ставлення до підопічних</h3>
+          <h3>Ставлення до підопічних </h3>
           <div class="progress">
             <div class="progress-bar" style="width: 100%;"></div>
           </div>
@@ -175,22 +175,36 @@
       <div class="col-md-4">
         <div class="project">
           <img src="roma.JPG" alt="Проект 1">
-          <h3>Big Baby Romen</h3>
-          <p>Опис проекту 1</p>
+          <center><h3>Big Baby Romen</h3></center>
+          <center><p>(Роман Вікторович)</p></center>
+          <br> Ще будучи маленькою дитиною, Роман дуже полюбляв їздити у рейси зі своїм дядею далекобійником, тому ще з дитинства вирішив для себе: "Коли виросту, стану далекобійником".
+          <br> Але як завжди, в нашій країні, яскраві дитячі мрії преконуються на сіру буденність офісної роботи на якогось дадьку.
+          <br> Наше знайомство почалося ще в далекому 2013 році, тоді Роман звернувся до нас з проханням допомогти йому, ну і як же ми могли відмовити такій людині.
+          <br> Тепер Роман успішний підприємець, він відкрив декілька заводів, а також завдяки своїй наполеглевості та підтримки нашої компанії втілив в життя свою дитячу мрію.
+          <br> Але як завжди наша компанія трішки перестаралася та тепер Роман ще й власник великої транспортної компанії.
         </div>
       </div>
       <div class="col-md-4">
         <div class="project">
           <img src="vlad.jpg" alt="Проект 2">
-          <h3>Vladdy Boy</h3>
-          <p>Опис проекту 2</p>
+          <center><h3>Vladdy Boy</h3></center>
+          <center><p>(Вдадислав Артурович)</p></center>
+          <br>Відівчившись одинадцять років на кардіохірурга та п'ять років пропрацювавши в лікарнях України,
+          <br>Владислав так і не зміг накопичити стартовий капітал щоб здійснити мрію свого дитинства: відкрити власний кардіо центр.
+          <br>Тому вирішив звернутися по допомогу в нашу компанію та не прогадав, адже ми швидко та якісно надали свої послуги: по фінансуваню стартапів та  розкрутки власного ім'я.
+          <br>Завдяки нам, Влад зміг втілити в життя те, про що навіть не міг мріяти.
+          <br>Він всьго за 7 років вікрив цілу лікарню на декілька корпусів та не десь в Україні, а в самому центрі Лос-Анджелесу та щей встиг повністю розрахуватися з нами .
+
         </div>
       </div>
       <div class="col-md-4">
         <div class="project">
           <img src="kola.jpg" alt="Проект 3">
-          <h3>Nikolakakaka</h3>
-          <p>Опис проекту 3</p>
+          <center> <h3>Nikolakakaka</h3></center>
+          <center><p>(Микола Юрійович)</p></center>
+          <br>Після закінчення наших курсів зміг успішно реалізуватися в житті.
+            <br>Курс допоміг Миколі стати авторитетом у своємо оточенні, що і спричинило його швидкий карєрний зріст: від простого слідчого до генерала СБУ.
+            <br>Завдяки здобутим зв'язкам на роботі, успішно заснував підпільну компанію по виготовленню та транспортуванню наркотичних речовин у інші країни.
         </div>
       </div>
     </div>
@@ -201,7 +215,7 @@
 <section id="contact" class="section bg-light">
   <div class="container">
     <h2 class="section-title">Контакти</h2>
-    <p>Якщо ти бажаєш змінити своє життя раз і назавжди - залиши свою заявку і ми зв'яжемося з тобою найближчим часом! </p>
+    <p>Якщо ти бажаєш змінити своє життя зараз і назавжди - залиши свою заявку і ми зв'яжемося з тобою найближчим часом! </p>
     <form>
       <div class="form-group">
         <label for="name">Ім'я</label>
@@ -222,7 +236,7 @@
 
 <footer class="section">
   <div class="container text-center">
-    <p>&copy; 2008 - 2023 Мій сайт-візитка. Усі права захищені.</p>
+    <p>&copy; 2008 - 2023.Panchenko&fam.Усі права захищені.</p>
   </div>
 </footer>
 
